syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.edu.ifgoiano.grpc";
option java_outer_classname = "WeatherServiceProto";

service WeatherService {
  rpc ObterTemperaturaAtual(CidadeRequest) returns (TemperaturaResponse);
  rpc PrevisaoCincoDias(CidadeRequest) returns (PrevisaoResponse);
  rpc ListarCidades(Empty) returns (ListaCidadesResponse);
  rpc CadastrarCidade(CidadeRequest) returns (StatusResponse);
  rpc EstatisticasClimaticas(CidadeRequest) returns (EstatisticasResponse);
}

message CidadeRequest {
  string nome = 1;
}

message TemperaturaResponse {
  float temperaturaAtual = 1;
}

message PrevisaoResponse {
  repeated float temperaturas = 1;
}

message ListaCidadesResponse {
  repeated string cidades = 1;
}

message StatusResponse {
  string mensagem = 1;
}

message EstatisticasResponse {
  float media = 1;
  float minima = 2;
  float maxima = 3;
}

message Empty {}
